<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    tools:context="com.example.sam.prm_391.Activities_Intent.IntentDemo">

    <Button
        android:id="@+id/CallOtherActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/callotheractivity"
        android:onClick="clicktoCallotherActivity"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/tinhtong"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Num 1"/>
        <EditText
            android:id="@+id/num1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="30dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Num 2"/>
        <EditText
            android:id="@+id/num2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:onClick="addtwodouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"/>
    
    <Button
        android:onClick="clicktoStartBrowser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startbrowser"/>

    <Button
        android:onClick="clicktoStartBrowerLaunch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startbrowserwithLI"/>

    <Button
        android:onClick="clicktoStartPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startphone"/>

    <Button
        android:onClick="clicktoGetException"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exceptioncondition"/>

    <Button
        android:onClick="clickToSendSMS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sendSMS"/>
</LinearLayout>
